# BinaryMasks

./: README.md  maskUtils.py  pyproject.toml  setup.py
binama/: __init__.py  example.py  utils.py
docs/: README.md
src/binama/: __init__.py  utils.py
